Format and minor refactor (#6)
* feat: minor refactor of Manager.open

* feat: minor refactor of Manager.onOpen

* feat: removed a bunch of this. and Manager.this., and made some fields final

* feat: renamed nsps to namespaces

* feat: a bit more refactoring

* feat: updated pom description

* feat: minor refactor

* feat: Socket.subEvents now using lambdas

* feat: more refactoring

* feat: minor refactor

* feat: minor refactor

* feat: minor refactor

* feat: minor refactor

* feat: minor refactor of Packet

* fix: url