@@ -72,20 +72,22 @@ public class Manager extends Emitter {
     private long _reconnectionDelay;
     private long _reconnectionDelayMax;
     private double _randomizationFactor;
-    private Backoff backoff;
     private long _timeout;
-    private URI uri;
-    private List<Packet> packetBuffer;
-    private Queue<On.Handle> subs;
-    private Options opts;
+
+    private final Backoff backoff;
+    private final URI uri;
+    private final List<Packet> packetBuffer;
+    private final Queue<On.Handle> subs;
+    private final Options opts;
+    private final Parser.Encoder encoder;
+    private final Parser.Decoder decoder;
+
     /*package*/ io.socket.engineio.client.Socket engine;
-    private Parser.Encoder encoder;
-    private Parser.Decoder decoder;
 
     /**
-     * This HashMap can be accessed from outside of EventThread.
+     * This HashMap can be accessed from outside EventThread.
      */
-    /*package*/ ConcurrentHashMap<String, Socket> nsps;
+    /*package*/ final ConcurrentHashMap<String, Socket> namespaces;
 
 
     public Manager() {
@@ -114,32 +116,32 @@ public class Manager extends Emitter {
             opts.callFactory = defaultCallFactory;
         }
         this.opts = opts;
-        this.nsps = new ConcurrentHashMap<>();
-        this.subs = new LinkedList<>();
-        this.reconnection(opts.reconnection);
-        this.reconnectionAttempts(opts.reconnectionAttempts != 0 ? opts.reconnectionAttempts : Integer.MAX_VALUE);
-        this.reconnectionDelay(opts.reconnectionDelay != 0 ? opts.reconnectionDelay : 1000);
-        this.reconnectionDelayMax(opts.reconnectionDelayMax != 0 ? opts.reconnectionDelayMax : 5000);
-        this.randomizationFactor(opts.randomizationFactor != 0.0 ? opts.randomizationFactor : 0.5);
-        this.backoff = new Backoff()
-                .setMin(this.reconnectionDelay())
-                .setMax(this.reconnectionDelayMax())
-                .setJitter(this.randomizationFactor());
-        this.timeout(opts.timeout);
-        this.readyState = ReadyState.CLOSED;
+        namespaces = new ConcurrentHashMap<>();
+        subs = new LinkedList<>();
+        reconnection(opts.reconnection);
+        reconnectionAttempts(opts.reconnectionAttempts != 0 ? opts.reconnectionAttempts : Integer.MAX_VALUE);
+        reconnectionDelay(opts.reconnectionDelay != 0 ? opts.reconnectionDelay : 1000);
+        reconnectionDelayMax(opts.reconnectionDelayMax != 0 ? opts.reconnectionDelayMax : 5000);
+        randomizationFactor(opts.randomizationFactor != 0.0 ? opts.randomizationFactor : 0.5);
+        backoff = new Backoff()
+                .setMin(reconnectionDelay())
+                .setMax(reconnectionDelayMax())
+                .setJitter(randomizationFactor());
+        timeout(opts.timeout);
+        readyState = ReadyState.CLOSED;
         this.uri = uri;
-        this.encoding = false;
-        this.packetBuffer = new ArrayList<>();
-        this.encoder = opts.encoder != null ? opts.encoder : new IOParser.Encoder();
-        this.decoder = opts.decoder != null ? opts.decoder : new IOParser.Decoder();
+        encoding = false;
+        packetBuffer = new ArrayList<>();
+        encoder = opts.encoder != null ? opts.encoder : new IOParser.Encoder();
+        decoder = opts.decoder != null ? opts.decoder : new IOParser.Decoder();
     }
 
     public boolean reconnection() {
-        return this._reconnection;
+        return _reconnection;
     }
 
     public Manager reconnection(boolean v) {
-        this._reconnection = v;
+        _reconnection = v;
         return this;
     }
 
@@ -148,63 +150,63 @@ public class Manager extends Emitter {
     }
 
     public int reconnectionAttempts() {
-        return this._reconnectionAttempts;
+        return _reconnectionAttempts;
     }
 
     public Manager reconnectionAttempts(int v) {
-        this._reconnectionAttempts = v;
+        _reconnectionAttempts = v;
         return this;
     }
 
     public final long reconnectionDelay() {
-        return this._reconnectionDelay;
+        return _reconnectionDelay;
     }
 
     public Manager reconnectionDelay(long v) {
-        this._reconnectionDelay = v;
-        if (this.backoff != null) {
-            this.backoff.setMin(v);
+        _reconnectionDelay = v;
+        if (backoff != null) {
+            backoff.setMin(v);
         }
         return this;
     }
 
     public final double randomizationFactor() {
-        return this._randomizationFactor;
+        return _randomizationFactor;
     }
 
     public Manager randomizationFactor(double v) {
-        this._randomizationFactor = v;
-        if (this.backoff != null) {
-            this.backoff.setJitter(v);
+        _randomizationFactor = v;
+        if (backoff != null) {
+            backoff.setJitter(v);
         }
         return this;
     }
 
     public final long reconnectionDelayMax() {
-        return this._reconnectionDelayMax;
+        return _reconnectionDelayMax;
     }
 
     public Manager reconnectionDelayMax(long v) {
-        this._reconnectionDelayMax = v;
-        if (this.backoff != null) {
-            this.backoff.setMax(v);
+        _reconnectionDelayMax = v;
+        if (backoff != null) {
+            backoff.setMax(v);
         }
         return this;
     }
 
     public long timeout() {
-        return this._timeout;
+        return _timeout;
     }
 
     public Manager timeout(long v) {
-        this._timeout = v;
+        _timeout = v;
         return this;
     }
 
     private void maybeReconnectOnOpen() {
         // Only try to reconnect if it's the first time we're connecting
-        if (!this.reconnecting && this._reconnection && this.backoff.getAttempts() == 0) {
-            this.reconnect();
+        if (!reconnecting && _reconnection && backoff.getAttempts() == 0) {
+            reconnect();
         }
     }
 
@@ -219,166 +221,126 @@ public class Manager extends Emitter {
      * @return a reference to this object.
      */
     public Manager open(final OpenCallback fn) {
-        EventThread.exec(new Runnable() {
-            @Override
-            public void run() {
-                if (logger.isLoggable(Level.FINE)) {
-                    logger.fine(String.format("readyState %s", Manager.this.readyState));
+        EventThread.exec(() -> {
+            if (logger.isLoggable(Level.FINE)) {
+                logger.fine(String.format("readyState %s", readyState));
+            }
+            if (readyState == ReadyState.OPEN || readyState == ReadyState.OPENING) return;
+
+            if (logger.isLoggable(Level.FINE)) {
+                logger.fine(String.format("opening %s", uri));
+            }
+            engine = new Engine(uri, opts);
+            final io.socket.engineio.client.Socket socket = engine;
+            final Manager self = this;
+            readyState = ReadyState.OPENING;
+            skipReconnect = false;
+
+            // propagate transport event.
+            socket.on(Engine.EVENT_TRANSPORT, args -> self.emit(Manager.EVENT_TRANSPORT, args));
+
+            final On.Handle openSub = On.on(socket, Engine.EVENT_OPEN, objects -> {
+                self.onOpen();
+                if (fn != null) fn.call(null);
+            });
+
+            On.Handle errorSub = On.on(socket, Engine.EVENT_ERROR, objects -> {
+                Object data = objects.length > 0 ? objects[0] : null;
+                logger.fine("connect_error");
+                self.cleanup();
+                self.readyState = ReadyState.CLOSED;
+                self.emit(EVENT_ERROR, data);
+                if (fn != null) {
+                    Exception err = new SocketIOException("Connection error",
+                            data instanceof Exception ? (Exception) data : null);
+                    fn.call(err);
+                } else {
+                    // Only do this if there is no fn to handle the error
+                    self.maybeReconnectOnOpen();
                 }
-                if (Manager.this.readyState == ReadyState.OPEN || Manager.this.readyState == ReadyState.OPENING) return;
+            });
 
-                if (logger.isLoggable(Level.FINE)) {
-                    logger.fine(String.format("opening %s", Manager.this.uri));
-                }
-                Manager.this.engine = new Engine(Manager.this.uri, Manager.this.opts);
-                final io.socket.engineio.client.Socket socket = Manager.this.engine;
-                final Manager self = Manager.this;
-                Manager.this.readyState = ReadyState.OPENING;
-                Manager.this.skipReconnect = false;
+            final long timeout = _timeout;
+            final Runnable onTimeout = () -> {
+                logger.fine(String.format("connect attempt timed out after %d", timeout));
+                openSub.destroy();
+                socket.close();
+                socket.emit(Engine.EVENT_ERROR, new SocketIOException("timeout"));
+            };
 
-                // propagate transport event.
-                socket.on(Engine.EVENT_TRANSPORT, new Listener() {
-                    @Override
-                    public void call(Object... args) {
-                        self.emit(Manager.EVENT_TRANSPORT, args);
-                    }
-                });
+            if (timeout == 0) {
+                EventThread.exec(onTimeout);
+                return;
+            } else if (_timeout > 0) {
+                logger.fine(String.format("connection attempt will timeout after %d", timeout));
 
-                final On.Handle openSub = On.on(socket, Engine.EVENT_OPEN, new Listener() {
-                    @Override
-                    public void call(Object... objects) {
-                        self.onopen();
-                        if (fn != null) fn.call(null);
-                    }
-                });
-
-                On.Handle errorSub = On.on(socket, Engine.EVENT_ERROR, new Listener() {
-                    @Override
-                    public void call(Object... objects) {
-                        Object data = objects.length > 0 ? objects[0] : null;
-                        logger.fine("connect_error");
-                        self.cleanup();
-                        self.readyState = ReadyState.CLOSED;
-                        self.emit(EVENT_ERROR, data);
-                        if (fn != null) {
-                            Exception err = new SocketIOException("Connection error",
-                                    data instanceof Exception ? (Exception) data : null);
-                            fn.call(err);
-                        } else {
-                            // Only do this if there is no fn to handle the error
-                            self.maybeReconnectOnOpen();
-                        }
-                    }
-                });
-
-                final long timeout = Manager.this._timeout;
-                final Runnable onTimeout = new Runnable() {
+                final Timer timer = new Timer();
+                timer.schedule(new TimerTask() {
                     @Override
                     public void run() {
-                        logger.fine(String.format("connect attempt timed out after %d", timeout));
-                        openSub.destroy();
-                        socket.close();
-                        socket.emit(Engine.EVENT_ERROR, new SocketIOException("timeout"));
+                        EventThread.exec(onTimeout);
                     }
-                };
+                }, timeout);
 
-                if (timeout == 0) {
-                    EventThread.exec(onTimeout);
-                    return;
-                } else if (Manager.this._timeout > 0) {
-                    logger.fine(String.format("connection attempt will timeout after %d", timeout));
-
-                    final Timer timer = new Timer();
-                    timer.schedule(new TimerTask() {
-                        @Override
-                        public void run() {
-                            EventThread.exec(onTimeout);
-                        }
-                    }, timeout);
-
-                    Manager.this.subs.add(new On.Handle() {
-                        @Override
-                        public void destroy() {
-                            timer.cancel();
-                        }
-                    });
-                }
-
-                Manager.this.subs.add(openSub);
-                Manager.this.subs.add(errorSub);
-
-                Manager.this.engine.open();
+                subs.add(timer::cancel);
             }
+
+            subs.add(openSub);
+            subs.add(errorSub);
+
+            engine.open();
         });
         return this;
     }
 
-    private void onopen() {
+    private void onOpen() {
         logger.fine("open");
 
-        this.cleanup();
+        cleanup();
 
-        this.readyState = ReadyState.OPEN;
-        this.emit(EVENT_OPEN);
+        readyState = ReadyState.OPEN;
+        emit(EVENT_OPEN);
 
-        final io.socket.engineio.client.Socket socket = this.engine;
-        this.subs.add(On.on(socket, Engine.EVENT_DATA, new Listener() {
-            @Override
-            public void call(Object... objects) {
-                Object data = objects[0];
-                try {
-                    if (data instanceof String) {
-                        Manager.this.decoder.add((String) data);
-                    } else if (data instanceof byte[]) {
-                        Manager.this.decoder.add((byte[]) data);
-                    }
-                } catch (DecodingException e) {
-                    logger.fine("error while decoding the packet: " + e.getMessage());
+        final io.socket.engineio.client.Socket socket = engine;
+        subs.add(On.on(socket, Engine.EVENT_DATA, objects -> {
+            Object data = objects[0];
+            try {
+                if (data instanceof String) {
+                    decoder.add((String) data);
+                } else if (data instanceof byte[]) {
+                    decoder.add((byte[]) data);
                 }
+            } catch (DecodingException e) {
+                logger.fine("error while decoding the packet: " + e.getMessage());
             }
         }));
-        this.subs.add(On.on(socket, Engine.EVENT_ERROR, new Listener() {
-            @Override
-            public void call(Object... objects) {
-                Manager.this.onerror((Exception)objects[0]);
-            }
-        }));
-        this.subs.add(On.on(socket, Engine.EVENT_CLOSE, new Listener() {
-            @Override
-            public void call(Object... objects) {
-                Manager.this.onclose((String)objects[0]);
-            }
-        }));
-        this.decoder.onDecoded(new Parser.Decoder.Callback() {
-            @Override
-            public void call (Packet packet) {
-                Manager.this.ondecoded(packet);
-            }
-        });
+        subs.add(On.on(socket, Engine.EVENT_ERROR, objects -> onError((Exception)objects[0])));
+        subs.add(On.on(socket, Engine.EVENT_CLOSE, objects -> onClose((String)objects[0])));
+        decoder.onDecoded(this::onDecoded);
     }
 
-    private void ondecoded(Packet packet) {
-        this.emit(EVENT_PACKET, packet);
+    private void onDecoded(Packet packet) {
+        emit(EVENT_PACKET, packet);
     }
 
-    private void onerror(Exception err) {
+    private void onError(Exception err) {
         logger.log(Level.FINE, "error", err);
-        this.emit(EVENT_ERROR, err);
+        emit(EVENT_ERROR, err);
     }
 
     /**
-     * Initializes {@link Socket} instances for each namespaces.
+     * Initializes {@link Socket} instances for each namespace.
      *
      * @param nsp namespace.
      * @param opts options.
      * @return a socket instance for the namespace.
      */
     public Socket socket(final String nsp, Options opts) {
-        synchronized (this.nsps) {
-            Socket socket = this.nsps.get(nsp);
+        synchronized (namespaces) {
+            Socket socket = namespaces.get(nsp);
             if (socket == null) {
                 socket = new Socket(this, nsp, opts);
-                this.nsps.put(nsp, socket);
+                namespaces.put(nsp, socket);
             }
             return socket;
         }
@@ -389,15 +351,15 @@ public class Manager extends Emitter {
     }
 
     /*package*/ void destroy() {
-        synchronized (this.nsps) {
-            for (Socket socket : this.nsps.values()) {
+        synchronized (namespaces) {
+            for (Socket socket : namespaces.values()) {
                 if (socket.isActive()) {
                     logger.fine("socket is still active, skipping close");
                     return;
                 }
             }
 
-            this.close();
+            close();
         }
     }
 
@@ -409,19 +371,16 @@ public class Manager extends Emitter {
 
         if (!self.encoding) {
             self.encoding = true;
-            this.encoder.encode(packet, new Parser.Encoder.Callback() {
-                @Override
-                public void call(Object[] encodedPackets) {
-                    for (Object packet : encodedPackets) {
-                        if (packet instanceof String) {
-                            self.engine.write((String)packet);
-                        } else if (packet instanceof byte[]) {
-                            self.engine.write((byte[])packet);
-                        }
+            encoder.encode(packet, encodedPackets -> {
+                for (Object packet1 : encodedPackets) {
+                    if (packet1 instanceof String) {
+                        self.engine.write((String) packet1);
+                    } else if (packet1 instanceof byte[]) {
+                        self.engine.write((byte[]) packet1);
                     }
-                    self.encoding = false;
-                    self.processPacketQueue();
                 }
+                self.encoding = false;
+                self.processPacketQueue();
             });
         } else {
             self.packetBuffer.add(packet);
@@ -429,9 +388,9 @@ public class Manager extends Emitter {
     }
 
     private void processPacketQueue() {
-        if (!this.packetBuffer.isEmpty() && !this.encoding) {
-            Packet pack = this.packetBuffer.remove(0);
-            this.packet(pack);
+        if (!packetBuffer.isEmpty() && !encoding) {
+            Packet pack = packetBuffer.removeFirst();
+            packet(pack);
         }
     }
 
@@ -439,107 +398,96 @@ public class Manager extends Emitter {
         logger.fine("cleanup");
 
         On.Handle sub;
-        while ((sub = this.subs.poll()) != null) sub.destroy();
-        this.decoder.onDecoded(null);
+        while ((sub = subs.poll()) != null) sub.destroy();
+        decoder.onDecoded(null);
 
-        this.packetBuffer.clear();
-        this.encoding = false;
+        packetBuffer.clear();
+        encoding = false;
 
-        this.decoder.destroy();
+        decoder.destroy();
     }
 
     /*package*/ void close() {
         logger.fine("disconnect");
-        this.skipReconnect = true;
-        this.reconnecting = false;
-        if (this.readyState != ReadyState.OPEN) {
+        skipReconnect = true;
+        reconnecting = false;
+        if (readyState != ReadyState.OPEN) {
             // `onclose` will not fire because
             // an open event never happened
-            this.cleanup();
+            cleanup();
         }
-        this.backoff.reset();
-        this.readyState = ReadyState.CLOSED;
-        if (this.engine != null) {
-            this.engine.close();
+        backoff.reset();
+        readyState = ReadyState.CLOSED;
+        if (engine != null) {
+            engine.close();
         }
     }
 
-    private void onclose(String reason) {
+    private void onClose(String reason) {
         logger.fine("onclose");
-        this.cleanup();
-        this.backoff.reset();
-        this.readyState = ReadyState.CLOSED;
-        this.emit(EVENT_CLOSE, reason);
+        cleanup();
+        backoff.reset();
+        readyState = ReadyState.CLOSED;
+        emit(EVENT_CLOSE, reason);
 
-        if (this._reconnection && !this.skipReconnect) {
-            this.reconnect();
+        if (_reconnection && !skipReconnect) {
+            reconnect();
         }
     }
 
     private void reconnect() {
-        if (this.reconnecting || this.skipReconnect) return;
+        if (reconnecting || skipReconnect) return;
 
         final Manager self = this;
 
-        if (this.backoff.getAttempts() >= this._reconnectionAttempts) {
+        if (backoff.getAttempts() >= _reconnectionAttempts) {
             logger.fine("reconnect failed");
-            this.backoff.reset();
-            this.emit(EVENT_RECONNECT_FAILED);
-            this.reconnecting = false;
+            backoff.reset();
+            emit(EVENT_RECONNECT_FAILED);
+            reconnecting = false;
         } else {
-            long delay = this.backoff.duration();
+            long delay = backoff.duration();
             logger.fine(String.format("will wait %dms before reconnect attempt", delay));
 
-            this.reconnecting = true;
+            reconnecting = true;
             final Timer timer = new Timer();
             timer.schedule(new TimerTask() {
                 @Override
                 public void run() {
-                    EventThread.exec(new Runnable() {
-                        @Override
-                        public void run() {
-                            if (self.skipReconnect) return;
+                    EventThread.exec(() -> {
+                        if (self.skipReconnect) return;
 
-                            logger.fine("attempting reconnect");
-                            int attempts = self.backoff.getAttempts();
-                            self.emit(EVENT_RECONNECT_ATTEMPT, attempts);
+                        logger.fine("attempting reconnect");
+                        int attempts = self.backoff.getAttempts();
+                        self.emit(EVENT_RECONNECT_ATTEMPT, attempts);
 
-                            // check again for the case socket closed in above events
-                            if (self.skipReconnect) return;
+                        // check again for the case socket closed in above events
+                        if (self.skipReconnect) return;
 
-                            self.open(new OpenCallback() {
-                                @Override
-                                public void call(Exception err) {
-                                    if (err != null) {
-                                        logger.fine("reconnect attempt error");
-                                        self.reconnecting = false;
-                                        self.reconnect();
-                                        self.emit(EVENT_RECONNECT_ERROR, err);
-                                    } else {
-                                        logger.fine("reconnect success");
-                                        self.onreconnect();
-                                    }
-                                }
-                            });
-                        }
+                        self.open(err -> {
+                            if (err != null) {
+                                logger.fine("reconnect attempt error");
+                                self.reconnecting = false;
+                                self.reconnect();
+                                self.emit(EVENT_RECONNECT_ERROR, err);
+                            } else {
+                                logger.fine("reconnect success");
+                                self.onReconnect();
+                            }
+                        });
                     });
                 }
             }, delay);
 
-            this.subs.add(new On.Handle() {
-                @Override
-                public void destroy() {
-                    timer.cancel();
-                }
-            });
+            subs.add(timer::cancel);
         }
     }
 
-    private void onreconnect() {
-        int attempts = this.backoff.getAttempts();
-        this.reconnecting = false;
-        this.backoff.reset();
-        this.emit(EVENT_RECONNECT, attempts);
+    private void onReconnect() {
+        int attempts = backoff.getAttempts();
+        reconnecting = false;
+        backoff.reset();
+        emit(EVENT_RECONNECT, attempts);
     }
 
 
